# qt6_ball_game

./: CMakeLists.txt  README.md
qml/: Sword.qml
source/: main.cpp
